Passing all but the LAST TEST!

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -13,3 +13,4 @@
 <script src='/client/linksView.js'></script>
 <script src='/client/createLinkView.js'></script>
 <script src='/client/router.js'></script>
+<button action="/logout" method="get">LOGOUT</button>
